syntax = "proto3";

package api.match.v1;

option go_package = "api/match/v1;v1";
option java_multiple_files = true;
option java_package = "api.match.v1";

service MatchService {
  rpc AddOrder(AddOrderRequest)returns(AddOrderReply){}
  rpc CancelOrder(CancelOrderRequest)returns(CancelOrderReply){}
}

message ReplyResult{
  int32 Code = 1;
  string Msg = 2;
}

message Order {
  string id = 1;// 订单id
  int64 userId = 2;// 用户id
  string pair = 3;// 交易对
  string price = 4;// 价格
  string amount = 5;// 数量
  string side = 6;// 订单方向 buy/sell
  string type = 7;// 订单类型 limit/market
  string timeInForce = 8;// 订单有效时间,type为limit时才生效 GTC/IOC/FOK
}

message AddOrderRequest{
  Order Order = 1;
}

message AddOrderReply{
  ReplyResult Result = 1;
}

message CancelOrderRequest{
  string Pair = 1;
  string Id = 2;
}

message CancelOrderReply{
  ReplyResult Result = 1;
}